--- a/css/test.css
+++ b/css/test.css
@@ -1,17 +1,11 @@
 
-        .page {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+        
 
      
 
         #globe-3d,
         #globe-2d-overlay {
-            display: block;
+            display: flex;
             position: absolute;
         }
 
